# academy

./: .gitignore  abstract.tex  conclusion.tex  fundamentals.tex  introduction.tex  main.tex  references.bib  references.tex  related.tex  title.tex
bibliography/: conclusion.tex  references.tex
computational_methods_for_edo/: README.md
computational_methods_for_edo/code/: metrics.ipynb  solver.py  timings.txt
computational_methods_for_edo/code/artifacts/: ODE.py  ODE_FixedStep.py  ODE_MultipleStep.py  Problems.ipynb  temp.py
computational_methods_for_edo/report/: conclusion.tex  front.tex  introduction.tex  main.tex  math_theory.tex  numerical_theory.tex  plan.tex  references.bib  results.tex  setup.tex
implementations/: convolutions.py
implementations/fmm-inpainting/: .gitignore  Cargo.toml
implementations/fmm-inpainting/src/: aux.rs  def.rs  defs.rs  inpainting.rs  main.rs  neighborhood.rs
inpainting/bibliography/: main.tex  related.tex  title.tex
inpainting/fmm-inpaint/: Cargo.toml
inpainting/fmm-inpainting/: .gitignore  Cargo.toml
inpainting/workbench/: .gitignore  Cargo.toml
inpainting/workbench/modules/fmm_inpaint/: Cargo.toml  README.md
inpainting/workbench/modules/fmm_inpaint/src/: def.rs  inpaint.rs
inpainting/workbench/modules/image_metrics/: Cargo.toml
inpainting/workbench/modules/image_metrics/src/: lib.rs  metrics_tests.rs
inpainting/workbench/modules/text-generator/: Cargo.toml
inpainting/workbench/modules/text-generator/src/: main.rs
inpainting/workbench/src/: main.rs  maskenizer.rs  metrics.rs  metrics_plot.rs
(+6 files in other folders)
