[package]
name = "fmm-inpainting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
ordered-float = "3.4.0"
rayon = "1.6.1"

[profile.release]
opt-level = 3

[profile.dev]
# opt-level = 1


