[package]
name = "rust-workbench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fmm_inpaint = { path = "modules/fmm_inpaint" }
image_metrics = { path = "modules/image_metrics" }
image = "0.24.5"
rand = "0.8.5"
imageproc = "0.23.0"
rusttype = "0.9.3"
csv = "1.2.1"
jemallocator = "0.5.0"
plotly = "0.8.3"
plotters = "0.3.4"
rayon = "1.7.0"
num_cpus = "1.15.0"

[profile.release]
opt-level = 3
lto = "fat"
debug = false
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
lto = false
debug = true
